# et-mlapi

./: .coverage  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml
.claude/rules/: N1-taxonomy.md  N3-naming-conventions.md  N5-error-handling.md
.claude/skills/architecture/: SKILL.md
.claude/skills/devops/: SKILL.md
.claude/skills/lib/fastapi/: SKILL.md
.claude/skills/lib/python/: SKILL.md
.claude/skills/testing/mocking/: SKILL.md
.github/workflows/: ci.yml
.windsurf/rules/: N2-project-structure.md  N4-lang-python.md  N4-libraries.md  N6-testing.md  pipeline.md  principles.md
.windsurf/skills/lib/pydantic/: SKILL.md
.windsurf/skills/lib/robyn/: SKILL.md
.windsurf/skills/starters/api-general/: SKILL.md
.windsurf/skills/starters/api-ml/: SKILL.md
.windsurf/skills/starters/cli/: SKILL.md
.windsurf/skills/testing/: SKILL.md
.windsurf/skills/testing/fixtures/: SKILL.md
docs/: framework_guidance.md
src/et_mlapi/: main.py
src/et_mlapi/adapters/: base.py  sample.py
src/et_mlapi/api/: health.py  sample.py
src/et_mlapi/core/: lifespan.py  logger.py  router.py  settings.py  websocket.py
src/et_mlapi/events/: process_pool.py  sample_adapter.py
src/et_mlapi/middlewares/: base.py  files.py  swagger.py
src/et_mlapi/models/: api.py  core.py  error.py
src/et_mlapi/websockets/: sample.py
tests/: conftest.py
tests/integration/: conftest.py
tests/integration/et_mlapi/api/: test_health.py  test_sample.py
tests/unit/: conftest.py
tests/unit/et_mlapi/adapters/: test_base.py  test_sample.py
tests/unit/et_mlapi/api/: test_health.py  test_sample.py
tests/unit/et_mlapi/core/: test_lifespan.py  test_logger.py  test_router.py  test_settings.py  test_websocket.py
tests/unit/et_mlapi/events/: test_process_pool.py  test_sample_adapter.py
tests/unit/et_mlapi/middlewares/: test_base.py  test_files.py  test_swagger.py
tests/unit/et_mlapi/models/: test_api.py  test_core.py  test_error.py
tests/unit/et_mlapi/websockets/: test_sample.py
